--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^8.13.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "html-webpack-plugin": "^5.5.0",
     "inject-body-webpack-plugin": "^1.3.0",
     "ts-loader": "^9.2.8",
