--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src/index.tsx",
   "scripts": {
     "start": "webpack serve --open --config webpack.dev.ts",
-    "build": "webpack --config webpack.prod.ts"
+    "build": "webpack --config webpack.prod.ts",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "inject-body-webpack-plugin": "^1.3.0",
     "ts-loader": "^9.2.8",
